--- a/mipagina/templates/index.html
+++ b/mipagina/templates/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!-- Loaded all static files -->
 		{% load staticfiles %}
 		<link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}" />
 		<style type="text/css">
 		</style>
-		<script>
+		<!--script>
 			function cap(){
 				var dato1=document.getElementById('{{ input1 }}').value;
 				var r=document.getElementById('rta');
 				r.innerHTML=dato1;
 			}
-		</script>
-		<script type="text/javascript" src="{% static "js/bootstrap.min.js" %}"/>
+		</script-->
+		<script type="text/javascript" src="{% static "js/bootstrap.min.js" %}"></script>
 		<script type="text/javascript" src="http://code.jquery.com/jquery.js" ></script>
 	</head>
 
@@ -20,8 +21,8 @@
 		<p>{{ bienvenido }}</p>
 		
 		<img src="{% static "images/"|add:image%}" />
-		
-		<form method="post" action="{{ accion }}">{% csrf_token %}
+		<!-- In this form are received the dates, two numbers and one operation -->
+		<!--form method="post" action="{{ accion }}">
 			<input type="text" id="ent1" name="ent1" class="input-medium search-query" placeholder="Primer numero"/>
 			<input type="text" id="ent2" name="ent2" class="input-medium search-query" placeholder="Segundo numero"/>
 			<select id="opc" name="opc" class="input-medium">
@@ -31,11 +32,17 @@
 				<option value="4">DIVISION</option>
 			</select>
 			<input value="enviar" type="submit" class="btn btn-primary"/>
+		
+		</form-->
+		<form method="post" action="{{ accion }}">{% csrf_token %}
+			{{ form.as_p }}
+			<input value="enviar" type="submit" class="btn btn-primary"/>
 		</form>
 		<div id="rta">
 			{{ respuesta }}
 		</div>
 		{% block contenido %}
+		<!-- It is one test above the blocks in django -->
 			<h1>BANNER DE IMAGENES</h1>
 		{% endblock %}
 	</body>
